tests/ui/invalid_pymethods_deprecated.stderr
error: __traverse__ cannot be used with #[pyo3(warn)] nor #[pyo3(deprecated)]
 --> tests/ui/invalid_pymethods_deprecated.rs:8:12
  |
8 |     #[pyo3(deprecated = "deprecated __traverse__")]
  |            ^^^^^^^^^^

error: #[classattr] cannot be used with #[pyo3(warn)] nor #[pyo3(deprecated)]
  --> tests/ui/invalid_pymethods_deprecated.rs:17:12
   |
17 |     #[pyo3(deprecated = "deprecated class attr")]
   |            ^^^^^^^^^^
